Bug 462805 - Feedback KCM page appears even if its KCM isn't installed
Summary: Feedback KCM page appears even if its KCM isn't installed
Status: RESOLVED FIXED
Alias: None
Product: Welcome Center
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-09 02:35 UTC by Nate Graham
Modified: 2022-12-10 21:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-12-09 02:35:02 UTC
It's possible and valid to not have KUserFeedback installed, and openSUSE does this by default.

When in this state, the kuserfeedback page appears with its title, but no KCM in it. We should hide the whole page instead.
Comment 1 Bug Janitor Service 2022-12-09 14:40:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-welcome/-/merge_requests/25
Comment 2 Nate Graham 2022-12-10 21:54:05 UTC
Git commit fa6bba7de2a4077e6c8a77bf8016e98f6e321173 by Nate Graham.
Committed on 10/12/2022 at 21:50.
Pushed by ngraham into branch 'master'.

Don't show User Feedback page if KUserFeedback isn't available

Some distros patch this out (e.g. openSUSE) so for them, we don't want
to show the user a blank and broken-looking page. This commit handles
that case appropriately by marking KUserFeedback as an optional
dependency, and only embedding its KCM if it's found.
FIXED-IN: 5.27

M  +1    -0    CMakeLists.txt
M  +3    -0    src/CMakeLists.txt
M  +4    -2    src/contents/ui/main.qml
M  +10   -0    src/controller.cpp
M  +1    -0    src/controller.h
A  +7    -0    src/kuserfeedbacksettings.h.cmake

https://invent.kde.org/plasma/plasma-welcome/commit/fa6bba7de2a4077e6c8a77bf8016e98f6e321173