Don't show User Feedback page if KUserFeedback isn't available

Some distros patch this out (e.g. openSUSE) so for them, we don't want
to show the user a blank and broken-looking page. This commit handles
that case appropriately by marking KUserFeedback as an optional
dependency, and only embedding its KCM if it's found.

BUG: 462805
FIXED-IN: 5.27