src/controller.h
@@ -13,6 +13,7 @@ class Controller : public QObject
 public:
     Q_INVOKABLE static void open(const QString &program);
     Q_INVOKABLE bool networkAlreadyConnected();
+    Q_INVOKABLE bool userFeedbackAvailable();
     Q_INVOKABLE QStringList distroPages();
 
     Q_PROPERTY(QString newPlasmaVersion MEMBER m_newPlasmaVersion NOTIFY newPlasmaVersionChanged)
