src/kuserfeedbacksettings.h.cmake
@@ -1,0 +1,7 @@
+/*
+ *  SPDX-FileCopyrightText: 2022 Nate Graham <nate@kde.org>
+ *
+ *  SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
+ */
+
+#cmakedefine01 HAVE_KUSERFEEDBACK
